# HospitalFastAPI

./: .gitignore  Makefile  README.md  docker-compose.yml
hospital-be/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini  test_health.py  test_hospital.py
hospital-be/alembic/: env.py
hospital-be/alembic/versions/: ebe6a1fbe57c_create_model.py
hospital-be/hospital/: __init__.py
hospital-be/hospital/controllers/: __init__.py  health.py
hospital-be/hospital/controllers/v1/: __init__.py  hospital.py
hospital-be/hospital/db_models/: __init__.py  database.py  hospital.py
hospital-be/hospital/services/: __init__.py  hospital.py
hospital-be/hospital/types/: __init__.py
hospital-be/hospital/types/entities/: __init__.py  hospital.py
hospital-be/hospital/types/requests/: __init__.py  hospital.py
hospital-be/hospital/types/responses/: __init__.py  hospital.py
